--- a/style.css
+++ b/style.css
@@ -1,14 +1,29 @@
 body {
   font-family: "Georgia", serif;
-  display: flex;
+  display: inline-block;
   align-items: center;
   justify-content: center;
   background: linear-gradient(to right, #000 0%, #fff 50%);
   color: #000;
   margin-right: 30px;
-  padding: 2rem;
-  padding-left: 350px;
+  padding: 4.5rem;
+  padding-left: 600px;
   flex-direction: column;
+}
+
+#kilometers {
+  margin-left: 10px;
+  margin-right: 5px;
+}
+
+input {
+  cursor:pointer;
+}
+
+
+label {
+  display: inline-block;
+  margin-bottom: 0.5rem;
 }
 
 h1,
@@ -24,16 +39,19 @@ h3 {
 }
 
 .button {
+  display: inline-block; 
   background-color: #c00000;
   color: #fff;
-  padding: 12px 24px;
+  padding: 6px 12px;
   border: none;
-  border-radius: 0;
+  border-radius: 5px;
   cursor: pointer;
   font-weight: bold;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+  margin-left: 10px;
 }
 
 .button:hover {
   background-color: #e00000;
+  cursor: pointer;
 }
